--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-         "token": "Your Bot Token",
-	 "partner": "ID Your Partner Channel",
-	 "link": "Your Link Server",
-         "idvc": "Your Voice ID"
+         "token": "MTAwOTA1NzIwMDc2MjgwMjI5OA.G-bdqP.AUXafEnk9b96AvpscdP77khWl4_jDxcXDmMvCk",
+	 "partner": "1009004323491037205 ",
+	 "link": "https://discord.gg/SfY463Xq8e",
+         "idvc": "1009004323491037212"
 }
