--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-         "token": "MTAwOTA1NzIwMDc2MjgwMjI5OA.G-bdqP.AUXafEnk9b96AvpscdP77khWl4_jDxcXDmMvCk",
+         "token": "MTAwOTA1NzIwMDc2MjgwMjI5OA.GeCdVt.GBtkqEw3XBIwVwgIkx31YXHnfp2dSmGWX8zELY8",
 	 "partner": "1009004323491037205 ",
 	 "link": "https://discord.gg/SfY463Xq8e",
          "idvc": "1009004323491037212"
