--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-         "token": "MTAwOTA1NzIwMDc2MjgwMjI5OA.GbHGNZ.09giDZBltWgmRKgOPU-eXd6OEHe1Z6PF2XMKZQ",
-	 "partner": "1009004323491037205 ",
-	 "link": "https://discord.gg/SfY463Xq8e",
-         "idvc": "1009004323491037212"
+         "token": "OTk5MjUzMzI4MjU1MDEyOTE2.GmXUle.MT474CiOKM2TdsALfwIF3UL2G5p6tFIm3aNdZo",
+	 "partner": "1150335148886339624",
+	 "link": "https://discord.gg/r2fz5Dprzg",
+         "idvc": "1149714644362084356"
 }
